# rail_user_queue_manager-release

./: AUTHORS.md  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  gbp.conf  rules
include/rail_user_queue_manager/: rail_user_queue_manager.h
msg/: Queue.msg  UserStatus.msg
rpm/: ros-hydro-rail-user-queue-manager.spec  ros-indigo-rail-user-queue-manager.spec  ros-jade-rail-user-queue-manager.spec  template.spec
src/: rail_user_queue_manager.cpp
srv/: UpdateQueue.srv
