<?xml version="1.0"?>
<package>
  <name>rail_user_queue_manager</name>
  <version>0.0.2</version>
  <description>Server Side ROS Queue Node</description>

  <author email="pdmitrano@wpi.edu">Peter Mitrano</author>
  <maintainer email="davidkent@wpi.edu">David Kent</maintainer>
  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/queue_manager</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/queue_manager/issues</url>
  <url type="repository">https://github.com/WPI-RAIL/queue_manager</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
</package>
